# StoneyDSP

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.json  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  VERSION  arch.mk  compile.mk  dep.mk  flags.mk  index.js  package.json  presets.mk  tsconfig.json  vcpkg-configuration.json  vcpkg.json  version.mk
.github/workflows/: all-os-latest.yaml  cmake-latest.yaml  cmake_project.yaml  macos-arm-latest.yaml  macos-latest.yaml  macos-latest.yml  static.yml  ubuntu-latest.yaml  ubuntu-latest.yml  windows-latest.yaml  windows-latest.yml
dep/vcpkg-registry/: README.md
dep/vcpkg-registry/ports/rack-sdk/2.5.2/: portfile.cmake  vcpkg.json
dep/vcpkg-registry/triplets/: x64-windows-rack.cmake
dep/vcpkg-registry/versions/: baseline.json
dep/vcpkg-registry/versions/r-/: rack-sdk.json
doc/: Doxyfile  exports.md  misc.md  presets.md  requirements.md
doc/simd/: 00_SIMD.md  01_MMX.md  02_SSE.md  03_SSE2.md  04_SSE3.md  05_SSSE3.md  06_SSE4.md  07_AVX.md  08_AVX512.md  09_NEON.md
docs/: .gitignore  CMake API.md  LICENSE  README.md  a.md
docs/doxygen/: Doxyfile  Makefile  make.bat  process_source_files.py
examples/: CMakeLists.txt
examples/CMake/: CMakeLists.txt
examples/CMake/AudioPlugin/: CMakeLists.txt
examples/CMake/AudioPlugin/src/AudioPlugin/: PluginEditor.cpp  PluginProcessor.cpp
examples/CMake/Biquads/: CMakeLists.txt
examples/CMake/ConsoleApplication/: CMakeLists.txt
examples/CMake/ConsoleApplication/include/: ConsoleAppExample.h
examples/CMake/ConsoleApplication/src/: ConsoleAppExample.cpp
examples/CMake/CurlConsoleApp/: CMakeLists.txt
examples/CMake/CurlConsoleApp/include/CurlConsoleApp/: main.h
examples/CMake/CurlConsoleApp/src/CurlConsoleApp/: main.cpp
examples/CMake/GUIApp/: CMakeLists.txt
examples/CMake/GUIApp/src/: component.cpp  main.cpp
extras/: CMakeLists.txt
extras/CLI/: CMakeLists.txt
extras/Icons/: CMakeLists.txt  README.md
extras/Resources/: CMakeLists.txt  README.md
include/StoneyDSP/: StoneyDSP.h  resources.h  util.h  version.h
include/stoneydsp/: stoneydsp.h
include/stoneydsp/core/: core.h
include/stoneydsp/core/system/: compiler.h  cxx.h  languages.h  platform.h
include/stoneydsp/core/types/: def.h  generic.h  int.h  math.h
include/stoneydsp/simd/: simd.h
include/stoneydsp/simd/vector/: support.h
lib/: stoneydsp.d.ts  stoneydsp.js  stoneydsp.ts
modules/: CMakeLists.txt  stoneydsp.cpp  stoneydsp.h
modules/stoneydsp_audio/: stoneydsp_audio.cpp  stoneydsp_audio.h  stoneydsp_audio.mm
modules/stoneydsp_core/: stoneydsp_core.cpp  stoneydsp_core.h  stoneydsp_core.mm
modules/stoneydsp_core/application/: stoneydsp_Application.h  stoneydsp_ConsoleApplication.h
modules/stoneydsp_core/maths/: stoneydsp_MathsConstants.h  stoneydsp_MathsFunctions.h  stoneydsp_MathsIConstants.h  stoneydsp_MathsIFunctions.h
modules/stoneydsp_core/res/: stoneydsp_rc.hpp
modules/stoneydsp_core/system/: stoneydsp_StandardHeader.h  stoneydsp_TargetPlatform.h
modules/stoneydsp_core/types/: stoneydsp_types.h
modules/stoneydsp_core/version/: stoneydsp_version.h
modules/stoneydsp_graphics/: stoneydsp_graphics.cpp  stoneydsp_graphics.h  stoneydsp_graphics.mm
modules/stoneydsp_web/: stoneydsp_web.cpp  stoneydsp_web.h  stoneydsp_web.mm
modules/stoneydsp_web/http/: stoneydsp_get.cpp  stoneydsp_get.h  stoneydsp_post.cpp  stoneydsp_post.h
public/: browserconfig.xml  code_of_conduct.txt  humans.txt  privacy_policy.txt  robots.txt  sitemap.xml  terms_of_service.txt  www_sitemap.xml
public/images/: CMakeLists.txt
scripts/toolchains/: MINGW32.cmake  MSYS2.cmake
share/: gdbinit  lldbinit  portfile.cmake
share/StoneyDSP/: IgnoreList.cmake  StoneyDSP.cmake  StoneyDSPConfig.cmake.in  portfile.cmake
share/cmake/Modules/: GetGitRef.cmake  WriteVersionFile.cmake  WriteVersionHeader.cmake  stoneydsp-core.cmake  stoneydsp-simd.cmake  stoneydsp-test.cmake  stoneydsp-version-helpers.cmake  stoneydsp.cmake
share/cmake/StoneyDSP/: FindStoneyDSP.cmake  StoneyDSPConfig.cmake  StoneyDSPConfig.cmake.in  StoneyDSPConfigVersion.cmake
share/scripts/: known_triplets.txt
share/scripts/toolchains/: CLANG64.cmake  MINGW64.cmake
share/vcpkg/ports/stoneydsp/: portfile.cmake
src/: main.cpp
src/StoneyDSP/: resources.cpp  shared.cpp
src/stoneydsp/: stoneydsp.cpp  stoneydsp.mm
src/stoneydsp/core/: core.cpp  core.mm
src/stoneydsp/simd/: simd.cpp
test/: catch2session.cpp  catch2session.hpp  catch2session.test.cpp  main.cpp  main.test.cpp  utils.hpp  utils.test.cpp  utils.test.hpp
test/stoneydsp/: stoneydsp.cpp  stoneydsp.test.cpp
test/stoneydsp/core/: core.test.cpp
test/stoneydsp/core/types/: int.test.cpp  int16.test.cpp  int32.test.cpp  int64.test.cpp  int8.test.cpp  math.test.cpp  ptrdiff_t.test.cpp  size_t.test.cpp  uint16.test.cpp  uint32.test.cpp  uint64.test.cpp  uint8.test.cpp
tests/: CMakeLists.txt  StoneyDSPCTestConfig.cmake
