# add_executable (Main "src/main.cpp")
# target_link_libraries (Main PRIVATE StoneyDSP::StoneyDSP)
# set_target_properties (Main
#     PROPERTIES
#     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib"
#     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib"
#     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin"
#     PDB_OUTPUT_DIRECTORY     "${CMAKE_CURRENT_BINARY_DIR}/bin"
#     # POSITION_INDEPENDENT_CODE ON
# )
